Completed with two solutions. The first one was not the most correct one but it worked. The second one was just missing the align on the body, was aligning in the items, but after chechinkg the solution made the change

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,16 +1,68 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
   width: 100px;
   height: 100px;
+  gap: 52px;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
+
+.container{
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.items{
+  width: 200px;
+}
+
+
+
+
+
+
+
+
+/* FIRST SOLUTION - not the cleanest
+
+.title{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+}
+
+.cun{
+  display: flex;
+}
+
+.items{
+  justify-content: center;
+  width: 200px;
+  margin: auto;
+  flex-wrap: wrap;
+  text-align: center;
+  flex: 1 ;
+
+}
+
+.items img{
+  gap: 52px;
+}
+*/
 
 /* do not edit this footer */
 .footer {
